force-app/main/default/objects/Free_goods__c/Free_goods__c.object-meta.xml
<CustomObject>
    <label>Approvers</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>