force-app/main/default/objects/Free_goods__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Approver__c</referenceTo>
    <relationshipLabel>Approvers</relationshipLabel>
    <relationshipName>Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>