force-app/main/default/objects/Free_goods__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2BW - Night Club</fullName>
            </value>
            <value>
                <fullName>2HT - Hotel</fullName>
            </value>
            <value>
                <fullName>2MC - Bar &amp; Restaurant</fullName>
            </value>
            <value>
                <fullName>2MR - Bar &amp; Restaurant - High</fullName>
            </value>
            <value>
                <fullName>2PC - Membership Club</fullName>
            </value>
            <value>
                <fullName>4CR - Chinese Restaurant</fullName>
            </value>
            <value>
                <fullName>4ZZ - Chinese Restaurant - Group</fullName>
            </value>
            <value>
                <fullName>6BL - Bar - Local</fullName>
            </value>
            <value>
                <fullName>6KR - Karaoke Chain</fullName>
            </value>
            <value>
                <fullName>6NZ - TOT-Night Club</fullName>
            </value>
            <value>
                <fullName>All Customer</fullName>
            </value>
            <value>
                <fullName>Asian Restaurant</fullName>
            </value>
            <value>
                <fullName>B2B - Off Trade</fullName>
            </value>
            <value>
                <fullName>B2B - On Trade</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Border Shops</fullName>
            </value>
            <value>
                <fullName>BulkPurchase</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Carry</fullName>
            </value>
            <value>
                <fullName>Chain Super</fullName>
            </value>
            <value>
                <fullName>Chinese Restaurant</fullName>
            </value>
            <value>
                <fullName>Concessionaires</fullName>
            </value>
            <value>
                <fullName>Convenience Store Chain</fullName>
            </value>
            <value>
                <fullName>Corporate Accounts</fullName>
            </value>
            <value>
                <fullName>CVS</fullName>
            </value>
            <value>
                <fullName>D2C</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
            <value>
                <fullName>DF_Hainan</fullName>
            </value>
            <value>
                <fullName>DF Island</fullName>
            </value>
            <value>
                <fullName>Domestic Airport</fullName>
            </value>
            <value>
                <fullName>Downtown / Shipchandlers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>