force-app/main/default/objects/Free_goods__c/fields/IHBR__c.field-meta.xml
<CustomField>
    <fullName>IHBR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IHBR</label>
    <type>Checkbox</type>
</CustomField>