force-app/main/default/objects/Free_goods__c/fields/MFM_team__c.field-meta.xml
<CustomField>
    <fullName>MFM_team__c</fullName>
    <label>MFM team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NTMK</fullName>
            </value>
            <value>
                <fullName>MMPJ</fullName>
            </value>
            <value>
                <fullName>Whiskies</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Innovation and White Spirits</fullName>
            </value>
            <value>
                <fullName>Luxe</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>OFF</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Cognac and White spirits</fullName>
            </value>
            <value>
                <fullName>Merchandising</fullName>
            </value>
            <value>
                <fullName>Bar&amp;Restaurant</fullName>
            </value>
            <value>
                <fullName>KTV</fullName>
            </value>
            <value>
                <fullName>IHBR</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>IT-PC</fullName>
            </value>
            <value>
                <fullName>IT-HQ</fullName>
            </value>
            <value>
                <fullName>Brand Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Trade Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>