force-app/main/default/objects/Free_goods__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Consumer A&amp;P</fullName>
            </value>
            <value>
                <fullName>Trade A&amp;P</fullName>
            </value>
            <value>
                <fullName>Structure Cost</fullName>
            </value>
            <value>
                <fullName>OIE</fullName>
            </value>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>Logistic Cost</fullName>
            </value>
            <value>
                <fullName>Trade A&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>