force-app/main/default/objects/Free_goods__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>CFF</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model NJ</fullName>
            </value>
            <value>
                <fullName>HQ-VIP Sales</fullName>
            </value>
            <value>
                <fullName>HQ-PG</fullName>
            </value>
            <value>
                <fullName>Premium-OFF</fullName>
            </value>
            <value>
                <fullName>Prestige-ZJ</fullName>
            </value>
            <value>
                <fullName>IT-HQ</fullName>
            </value>
            <value>
                <fullName>Prestige-BJ ON</fullName>
            </value>
            <value>
                <fullName>Prestige-BJ OFF&amp;CR</fullName>
            </value>
            <value>
                <fullName>Prestige-Hainan</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model XA</fullName>
            </value>
            <value>
                <fullName>HQ-Lab</fullName>
            </value>
            <value>
                <fullName>Prestige-Anhui North</fullName>
            </value>
            <value>
                <fullName>Prestige-SG</fullName>
            </value>
            <value>
                <fullName>Prestige-QY</fullName>
            </value>
            <value>
                <fullName>Prestige-Hebei South</fullName>
            </value>
            <value>
                <fullName>Prestige-Hebei North</fullName>
            </value>
            <value>
                <fullName>Premium-HeN/ShX/G/N/Q/XJ MOT</fullName>
            </value>
            <value>
                <fullName>Prestige-JX North</fullName>
            </value>
            <value>
                <fullName>Premium-HQ MAC</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model SH</fullName>
            </value>
            <value>
                <fullName>Premium-XM MOT</fullName>
            </value>
            <value>
                <fullName>North-WS</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model HZ</fullName>
            </value>
            <value>
                <fullName>Premium-NW MOT</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model CD</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model WH</fullName>
            </value>
            <value>
                <fullName>Premium On-ID Model West</fullName>
            </value>
            <value>
                <fullName>Premium On-D Model CQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>