force-app/main/default/objects/Free_goods__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>East STK4 Order</fullName>
            </value>
            <value>
                <fullName>Central STK4 Order</fullName>
            </value>
            <value>
                <fullName>HQ STK4 Combo Order</fullName>
            </value>
            <value>
                <fullName>HQ STK4 Order</fullName>
            </value>
            <value>
                <fullName>MKT STK4 Order</fullName>
            </value>
            <value>
                <fullName>Free Goods Request</fullName>
            </value>
            <value>
                <fullName>STK4 - MOT NKA HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>